# gpu-simulator

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.md  build.ninja  cmake_install.cmake  setup.sh
include/rocket/core/: dynamics.hpp  environment.hpp  monte_carlo.hpp  renderer.hpp  rocket.hpp  shader_loader.hpp
include/rocket/cuda/: cuda_utils.cuh  kernel_wrappers.hpp
include/rocket/mpi/: mpi_monte_carlo.hpp
python/: monte_carlo_ml.py
src/: main.cpp
src/core/: dynamics.cpp  environment.cpp  monte_carlo.cpp  rocket.cpp
src/cuda/: kernel_wrappers.cpp  kernel_wrappers.cu
src/mpi/: mpi_monte_carlo.cpp
src/visualization/: renderer.cpp  shader_loader.cpp
src/visualization/shaders/: trajectory.frag
